add flag and subregion

--- a/index.html
+++ b/index.html
@@ -30,11 +30,20 @@
                 </th>
             </tr>
             <tr>
+                <td>Flag</td>
+                <td id="flag"></td>       
+            </tr>
+            <tr>
                 <td>Capital</td>
                 <td id="capital"></td>       
-            <tr> 
+            </tr>
+            <tr>
                 <td>Region</td>
                 <td id="region"></td>
+            </tr>
+            <tr>
+                <td>Subregion</td>
+                <td id="subregion"></td>       
             </tr>
             <tr>
                 <td>Population</td>
