--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <br>
     <input id="country-name" type="text" />
     <button id="search">Search a country</button>
+    <button id="reset">Reset</button>
     <br>
     <br>
     <div id='show'>  
