change h2 and and media for phones change margin button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <br>
     <br>
     <div id='show'>  
-        <h2>List of countries</h2>
+        <h2>Country Info</h2>
         <table>
             <tr>
                 <th colspan="2">
